fixed alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@ body {
     font-family: "Tiny5", sans-serif;
     font-weight: 400;
     font-style: normal;
+    max-width: 100vw;
 }
 h1 {
     font-size: 100px;
@@ -18,7 +19,6 @@ h1 {
 
 
  #countdown {
-     font-family: Arial, sans-serif;
      font-size: 2em;
      margin-top: 20px;
  }
